<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nos.secureflomessaging.MainActivity"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:textAppearanceSmall"
            android:text="@string/action_sign_out"
            android:textStyle="bold"
            android:onClick="clickSignOutButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:clickable="false" />

        <Button
            android:id="@+id/write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:textAppearanceSmall"
            android:text="@string/write"
            android:textStyle="bold"
            android:onClick="clickComposeButton"
            android:layout_above="@+id/sign_out_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="49dp" />

        <Button
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:textAppearanceSmall"
            android:text="@string/refreshmsg"
            android:textStyle="bold"
            android:onClick="refresh"
            android:layout_above="@+id/sign_out_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/note"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/to" />
        <TextView
            android:id="@+id/timeout_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Received messages automatically time out after 60 seconds"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_above="@+id/to"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="31dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_note"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/input"
            android:layout_above="@+id/write"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/to_who"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/to"
            android:layout_above="@+id/input"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />



    </RelativeLayout>

</LinearLayout>
